--- a/src/assets/stylesheets/components/pre_code.scss
+++ b/src/assets/stylesheets/components/pre_code.scss
@@ -1,5 +1,5 @@
 .code-block {
-  background-color: $light-grey;
+  background-color: #efefef;
   padding: 8px;
   word-break: break-all;
   text-align: left;
@@ -9,7 +9,7 @@
 }
 
 .code-block .comment {
-  color: #888;
+  color: #777;
 }
 
 .code-inline {
